# pythondev-example

./: .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/pythondev_example/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
