[tool.poetry]
name = "pythondev-example"
version = "0.1.0"
description = "An example python project that follows guidelines to modernize Python develpoment."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dtherrick/pythondev-example"
repository = "https://github.com/dtherrick/pythondev-example"
keywords = ["pythondev"]
authors = ["Damian Herrick <damian.herrick@sas.com>"]

[tool.poetry.scripts]
pythondev-example = "pythondev_example.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {version = "^5.5", extras = ["toml"]}
nox = "^2020.12.31"
pytest-mock = "^3.6.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pythondev_example"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
